# Eco2AI-playground

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  example.env  main.py  pyproject.toml
eco2ai_playground/: alembic.ini
eco2ai_playground/api/: __main__.py  app.py  broadcaster.py  schemas.py
eco2ai_playground/api/handlers/: project.py  webhook.py  ws.py
eco2ai_playground/core/: dependencies.py  settings.py
eco2ai_playground/db/: __main__.py  models.py  session.py
eco2ai_playground/db/alembic/: env.py
eco2ai_playground/db/alembic/versions/: 07d2a9b9b729_initial.py  4f9856fa110f_delete_cost.py  e9642c2509f5_increase_length_of_project_id_to_36.py
