[tool.poetry]
name = "eco2ai-playground"
version = "0.1.0"
description = ""
authors = ["ada0l <andreika.varfolomeev@yandex.ru>"]
readme = "README.md"
packages = [{include = "eco2ai_playground"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.1"
uvicorn = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
