[tool.poetry]
name = "eco2ai-playground"
version = "0.1.0"
description = ""
authors = ["ada0l <andreika.varfolomeev@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.21.0"
sqlalchemy = "^2.0.6"
alembic = "^1.10.2"
websockets = "^10.4"
aiosqlite = "^0.18.0"
broadcaster = "^0.2.0"
asyncpg = "^0.28.0"
pydantic-settings = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eco2ai-playground-api = "eco2ai_playground.api.__main__:main"
eco2ai-playground-db = "eco2ai_playground.db.__main__:main"
